Add genre table and apis for it
